force-app/main/default/objects/ICF_Parameter__c/ICF_Parameter__c.object-meta.xml
<CustomObject>
    <description>Change Request - ICF</description>
    <label>ICF Parameter</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>ICF Parameter No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICF Parameter</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>