force-app/main/default/objects/ICF_Parameter__c/fields/API_Key_1__c.field-meta.xml
<CustomField>
    <fullName>API_Key_1__c</fullName>
    <inlineHelpText>Bitly API Key</inlineHelpText>
    <label>API Key 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>