force-app/main/default/objects/ICF_Parameter__c/fields/Batchname__c.field-meta.xml
<CustomField>
    <fullName>Batchname__c</fullName>
    <inlineHelpText>Batchname JATIS</inlineHelpText>
    <label>Batchname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>