force-app/main/default/objects/ICF_Parameter__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <label>Case Priority TN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>