force-app/main/default/objects/ICF_Parameter__c/fields/CCC_I_Complain_Exculde__c.field-meta.xml
<CustomField>
    <fullName>CCC_I_Complain_Exculde__c</fullName>
    <label>I Complain Exclude (CCC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Entity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex Case</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Potential Complaint</fullName>
            </value>
            <value>
                <fullName>Soft Complaint</fullName>
            </value>
            <value>
                <fullName>Potensial Complaint (MAGI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>