force-app/main/default/objects/ICF_Parameter__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <defaultValue>&apos;0&apos;</defaultValue>
    <inlineHelpText>0  : Normal SMS  
1  : Alert SMS 
2  : OTP SMS</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>