force-app/main/default/objects/ICF_Parameter__c/fields/Countdown_Send__c.field-meta.xml
<CustomField>
    <fullName>Countdown_Send__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>in Day(s)</inlineHelpText>
    <label>Countdown Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>