force-app/main/default/objects/ICF_Parameter__c/fields/Current_Document__c.field-meta.xml
<CustomField>
    <fullName>Current_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Document</label>
    <referenceTo>ICF_Parameter__c</referenceTo>
    <relationshipName>Parameterized1</relationshipName>
    <type>Lookup</type>
</CustomField>