force-app/main/default/objects/ICF_Parameter__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>Division JATIS</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Operations Customer Care Center</fullName>
            </value>
            <value>
                <fullName>CCCAFI</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CMU_AMFS_SFDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>