force-app/main/default/objects/ICF_Parameter__c/fields/Dont_Send_if_Have_any_Case_Open__c.field-meta.xml
<CustomField>
    <fullName>Dont_Send_if_Have_any_Case_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Send if Have any Case Open</label>
    <type>Checkbox</type>
</CustomField>