force-app/main/default/objects/ICF_Parameter__c/fields/Exclude_Product_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Product_Plan_Code__c</fullName>
    <label>Exclude Product Code Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMMS</fullName>
            </value>
            <value>
                <fullName>AMMS1</fullName>
            </value>
            <value>
                <fullName>AMMS100</fullName>
            </value>
            <value>
                <fullName>AMMS1N</fullName>
            </value>
            <value>
                <fullName>AMMS2</fullName>
            </value>
            <value>
                <fullName>AMMS3</fullName>
            </value>
            <value>
                <fullName>AMMS30</fullName>
            </value>
            <value>
                <fullName>AMMS4</fullName>
            </value>
            <value>
                <fullName>AMMS5</fullName>
            </value>
            <value>
                <fullName>AMMS50</fullName>
            </value>
            <value>
                <fullName>AMMSE1</fullName>
            </value>
            <value>
                <fullName>AMMSE2</fullName>
            </value>
            <value>
                <fullName>AMMSE3</fullName>
            </value>
            <value>
                <fullName>AMMSE4</fullName>
            </value>
            <value>
                <fullName>AMMSE5</fullName>
            </value>
            <value>
                <fullName>AMMSJT</fullName>
            </value>
            <value>
                <fullName>AMMSJT1</fullName>
            </value>
            <value>
                <fullName>AMMSJT2</fullName>
            </value>
            <value>
                <fullName>AMMSJT3</fullName>
            </value>
            <value>
                <fullName>AMMSJT4</fullName>
            </value>
            <value>
                <fullName>AMMSJT5</fullName>
            </value>
            <value>
                <fullName>AMMSLP</fullName>
            </value>
            <value>
                <fullName>AMMSLP1</fullName>
            </value>
            <value>
                <fullName>AMMSLP2</fullName>
            </value>
            <value>
                <fullName>AMMSLP3</fullName>
            </value>
            <value>
                <fullName>AMMSLP4</fullName>
            </value>
            <value>
                <fullName>AMMSLP5</fullName>
            </value>
            <value>
                <fullName>CLPMTP</fullName>
            </value>
            <value>
                <fullName>MANPRO</fullName>
            </value>
            <value>
                <fullName>MKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>