force-app/main/default/objects/ICF_Parameter__c/fields/Exclude_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Survey_Type__c</fullName>
    <label>Exclude Send Case Number</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I Ask - Inquiry</fullName>
            </value>
            <value>
                <fullName>I Ask - Request</fullName>
            </value>
            <value>
                <fullName>I Buy</fullName>
            </value>
            <value>
                <fullName>I Claim</fullName>
            </value>
            <value>
                <fullName>I Complain</fullName>
            </value>
            <value>
                <fullName>I Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>