force-app/main/default/objects/ICF_Parameter__c/fields/Extend_Freeze_Date_When_Responded__c.field-meta.xml
<CustomField>
    <fullName>Extend_Freeze_Date_When_Responded__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Will extend the freeze date (today + interval completed) when survey has been responded</description>
    <inlineHelpText>Will extend the freeze date (today + interval completed) when survey has been responded</inlineHelpText>
    <label>Extend Freeze Date When Responded</label>
    <type>Checkbox</type>
</CustomField>