force-app/main/default/objects/ICF_Parameter__c/fields/ICF_Method__c.field-meta.xml
<CustomField>
    <fullName>ICF_Method__c</fullName>
    <label>ICF / Thanks Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>