force-app/main/default/objects/ICF_Parameter__c/fields/ICF_SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>ICF_SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF - SMS Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Email_SMS_Template__c.Method__c</field>
            <operation>equals</operation>
            <value>SMS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Email_SMS_Template__c</referenceTo>
    <relationshipLabel>ICF Parameter (ICF - SMS Template)</relationshipLabel>
    <relationshipName>ICF_Parameter1</relationshipName>
    <type>Lookup</type>
</CustomField>