force-app/main/default/objects/ICF_Parameter__c/fields/Include_Product_Code_Plan_Claim_1__c.field-meta.xml
<CustomField>
    <fullName>Include_Product_Code_Plan_Claim_1__c</fullName>
    <label>Include Product Code Plan Claim 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MEA1B11</fullName>
            </value>
            <value>
                <fullName>MEA1B21</fullName>
            </value>
            <value>
                <fullName>MEA1B31</fullName>
            </value>
            <value>
                <fullName>MEA1B41</fullName>
            </value>
            <value>
                <fullName>MEA2B11</fullName>
            </value>
            <value>
                <fullName>MEA2B21</fullName>
            </value>
            <value>
                <fullName>MEA2B31</fullName>
            </value>
            <value>
                <fullName>MEA2B41</fullName>
            </value>
            <value>
                <fullName>MEA3B11</fullName>
            </value>
            <value>
                <fullName>MEA3B21</fullName>
            </value>
            <value>
                <fullName>MEA3B31</fullName>
            </value>
            <value>
                <fullName>MEA3B41</fullName>
            </value>
            <value>
                <fullName>MEA3B51</fullName>
            </value>
            <value>
                <fullName>MKD1</fullName>
            </value>
            <value>
                <fullName>MKD2</fullName>
            </value>
            <value>
                <fullName>MKDA1</fullName>
            </value>
            <value>
                <fullName>MKDA2</fullName>
            </value>
            <value>
                <fullName>MKDAB1</fullName>
            </value>
            <value>
                <fullName>MKDAB2</fullName>
            </value>
            <value>
                <fullName>MKDC1</fullName>
            </value>
            <value>
                <fullName>MKDC2</fullName>
            </value>
            <value>
                <fullName>MKDCB1</fullName>
            </value>
            <value>
                <fullName>MKDCB2</fullName>
            </value>
            <value>
                <fullName>MKDD1</fullName>
            </value>
            <value>
                <fullName>MKDD2</fullName>
            </value>
            <value>
                <fullName>MKDDB1</fullName>
            </value>
            <value>
                <fullName>MKDDB2</fullName>
            </value>
            <value>
                <fullName>MKDV1</fullName>
            </value>
            <value>
                <fullName>MKDV2</fullName>
            </value>
            <value>
                <fullName>MKO00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>