force-app/main/default/objects/ICF_Parameter__c/fields/Include_Product_Code_Plan_Claim_2__c.field-meta.xml
<CustomField>
    <fullName>Include_Product_Code_Plan_Claim_2__c</fullName>
    <label>Include Product Code Plan Claim 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSH01F2</fullName>
            </value>
            <value>
                <fullName>MSH02F0</fullName>
            </value>
            <value>
                <fullName>MSH02F1</fullName>
            </value>
            <value>
                <fullName>MSH02F2</fullName>
            </value>
            <value>
                <fullName>MSH03F0</fullName>
            </value>
            <value>
                <fullName>MSH03F1</fullName>
            </value>
            <value>
                <fullName>MSH03F2</fullName>
            </value>
            <value>
                <fullName>MSH04F0</fullName>
            </value>
            <value>
                <fullName>MSH04F1</fullName>
            </value>
            <value>
                <fullName>MSH04F2</fullName>
            </value>
            <value>
                <fullName>MSH05F0</fullName>
            </value>
            <value>
                <fullName>MSH05F1</fullName>
            </value>
            <value>
                <fullName>MSH05F2</fullName>
            </value>
            <value>
                <fullName>MSH06F0</fullName>
            </value>
            <value>
                <fullName>MSH06F1</fullName>
            </value>
            <value>
                <fullName>MSH06F2</fullName>
            </value>
            <value>
                <fullName>MSH07F0</fullName>
            </value>
            <value>
                <fullName>MSH07F1</fullName>
            </value>
            <value>
                <fullName>MSH07F2</fullName>
            </value>
            <value>
                <fullName>MSH08F0</fullName>
            </value>
            <value>
                <fullName>MSH08F1</fullName>
            </value>
            <value>
                <fullName>MSH08F2</fullName>
            </value>
            <value>
                <fullName>MSH09F0</fullName>
            </value>
            <value>
                <fullName>MSH09F1</fullName>
            </value>
            <value>
                <fullName>MSH09F2</fullName>
            </value>
            <value>
                <fullName>MSH10F0</fullName>
            </value>
            <value>
                <fullName>MSH10F1</fullName>
            </value>
            <value>
                <fullName>MSH10F2</fullName>
            </value>
            <value>
                <fullName>MSH11F0</fullName>
            </value>
            <value>
                <fullName>MSH11F1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>