force-app/main/default/objects/ICF_Parameter__c/fields/Interval_Completed_Month__c.field-meta.xml
<CustomField>
    <fullName>Interval_Completed_Month__c</fullName>
    <inlineHelpText>The interval month to freeze send any survey to respondent due to the respondent has completed the survey. The system will not send the survey for ? month</inlineHelpText>
    <label>Interval Completed (month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
                <default>true</default>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>