force-app/main/default/objects/ICF_Parameter__c/fields/Interval_Max_Loop__c.field-meta.xml
<CustomField>
    <fullName>Interval_Max_Loop__c</fullName>
    <inlineHelpText>The maximum loop for sending survey if respondent is not responding the survey</inlineHelpText>
    <label>Interval Max Loop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>