force-app/main/default/objects/ICF_Parameter__c/fields/Login_1__c.field-meta.xml
<CustomField>
    <fullName>Login_1__c</fullName>
    <inlineHelpText>Bitly Login</inlineHelpText>
    <label>Login 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>