force-app/main/default/objects/ICF_Parameter__c/fields/Login_2__c.field-meta.xml
<CustomField>
    <fullName>Login_2__c</fullName>
    <inlineHelpText>Bitly Login</inlineHelpText>
    <label>Login 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>