force-app/main/default/objects/ICF_Parameter__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master</label>
    <referenceTo>ICF_Parameter__c</referenceTo>
    <relationshipLabel>ICF Parameter (Change Request)</relationshipLabel>
    <relationshipName>Parameterized</relationshipName>
    <type>Lookup</type>
</CustomField>