force-app/main/default/objects/ICF_Parameter__c/fields/Master_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Type_Name__c</fullName>
    <formula>Master__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Record Type Name</label>
    <type>Text</type>
</CustomField>