force-app/main/default/objects/ICF_Parameter__c/fields/Merge_Thanks_Note__c.field-meta.xml
<CustomField>
    <fullName>Merge_Thanks_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will merge the thanks note if have same request date. This configuration will take effect after the change of the flag and will not affect the existing thanks note</description>
    <inlineHelpText>Will merge the thanks note if have same request date. This configuration will take effect after the change of the flag and will not affect the existing thanks note</inlineHelpText>
    <label>Merge Thanks Note</label>
    <type>Checkbox</type>
</CustomField>