force-app/main/default/objects/ICF_Parameter__c/fields/Negative_Feedback_Row__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback_Row__c</fullName>
    <label>Negative Feedback Row</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>