force-app/main/default/objects/ICF_Parameter__c/fields/Non_CCC_I_Ask_Exculde__c.field-meta.xml
<CustomField>
    <fullName>Non_CCC_I_Ask_Exculde__c</fullName>
    <label>Non CCC - I Ask – Exculde</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non in-force policies</fullName>
            </value>
            <value>
                <fullName>Policies for worksites</fullName>
            </value>
            <value>
                <fullName>Claim Enquiry</fullName>
            </value>
            <value>
                <fullName>Agent Calls</fullName>
            </value>
            <value>
                <fullName>un-resolved enquiry</fullName>
            </value>
            <value>
                <fullName>un-resolved request</fullName>
            </value>
            <value>
                <fullName>Intermediaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>