force-app/main/default/objects/ICF_Parameter__c/fields/Non_CCC_I_Buy_Exculde__c.field-meta.xml
<CustomField>
    <fullName>Non_CCC_I_Buy_Exculde__c</fullName>
    <label>Non CCC - I Buy - Exculde</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non in-force policies</fullName>
            </value>
            <value>
                <fullName>Intermediaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>