force-app/main/default/objects/ICF_Parameter__c/fields/Non_CCC_I_Claim_Exculde__c.field-meta.xml
<CustomField>
    <fullName>Non_CCC_I_Claim_Exculde__c</fullName>
    <label>Non CCC - I Claim – Exculde</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non Customer</fullName>
            </value>
            <value>
                <fullName>Partial Payment Claims</fullName>
            </value>
            <value>
                <fullName>Non in-force policies</fullName>
            </value>
            <value>
                <fullName>Death Claims</fullName>
            </value>
            <value>
                <fullName>CI, AP and diability (WP)</fullName>
            </value>
            <value>
                <fullName>Reject Claims</fullName>
            </value>
            <value>
                <fullName>Claim With Adjustment Process</fullName>
            </value>
            <value>
                <fullName>PA Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>