force-app/main/default/objects/ICF_Parameter__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Password JATIS</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>